--- a/products/RAT-STATS/rstats_modules/unrestricted_attribute_appraisal/src/UIRStatsUAA.ui
+++ b/products/RAT-STATS/rstats_modules/unrestricted_attribute_appraisal/src/UIRStatsUAA.ui
@@ -216,18 +216,34 @@
        </sizepolicy>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout">
+       <property name="spacing">
+        <number>32</number>
+       </property>
        <property name="leftMargin">
-        <number>1</number>
+        <number>4</number>
        </property>
        <property name="topMargin">
-        <number>1</number>
+        <number>4</number>
        </property>
        <property name="rightMargin">
-        <number>1</number>
+        <number>4</number>
        </property>
        <property name="bottomMargin">
-        <number>1</number>
+        <number>4</number>
        </property>
+       <item>
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
        <item>
         <widget class="QPushButton" name="m_btnHelp">
          <property name="sizePolicy">
@@ -235,6 +251,12 @@
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>128</width>
+           <height>0</height>
+          </size>
          </property>
          <property name="text">
           <string>Help</string>
@@ -255,6 +277,12 @@
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
+         <property name="minimumSize">
+          <size>
+           <width>128</width>
+           <height>0</height>
+          </size>
+         </property>
          <property name="text">
           <string>Generate</string>
          </property>
@@ -274,6 +302,12 @@
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
+         <property name="minimumSize">
+          <size>
+           <width>128</width>
+           <height>0</height>
+          </size>
+         </property>
          <property name="text">
           <string>Exit</string>
          </property>
@@ -284,6 +318,19 @@
           </size>
          </property>
         </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
        </item>
       </layout>
      </widget>
@@ -548,7 +595,7 @@
      <x>0</x>
      <y>0</y>
      <width>1024</width>
-     <height>25</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
