--- a/products/RAT-STATS/rstats_modules/single_stage_random_numbers/src/UIRStatsSSRN.ui
+++ b/products/RAT-STATS/rstats_modules/single_stage_random_numbers/src/UIRStatsSSRN.ui
@@ -389,7 +389,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="m_btnGenerate">
+        <widget class="QPushButton" name="m_btnExecute">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
            <horstretch>0</horstretch>
@@ -403,7 +403,7 @@
           </size>
          </property>
          <property name="text">
-          <string>Generate</string>
+          <string>Execute</string>
          </property>
          <property name="iconSize">
           <size>
@@ -514,10 +514,10 @@
           </property>
           <layout class="QGridLayout" name="gridLayout">
            <property name="topMargin">
-            <number>16</number>
+            <number>11</number>
            </property>
            <property name="bottomMargin">
-            <number>16</number>
+            <number>11</number>
            </property>
            <item row="0" column="3">
             <widget class="QLabel" name="label_2">
@@ -634,16 +634,16 @@
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_2">
            <property name="leftMargin">
-            <number>4</number>
+            <number>11</number>
            </property>
            <property name="topMargin">
-            <number>16</number>
+            <number>11</number>
            </property>
            <property name="rightMargin">
-            <number>4</number>
+            <number>11</number>
            </property>
            <property name="bottomMargin">
-            <number>16</number>
+            <number>11</number>
            </property>
            <item>
             <widget class="QCheckBox" name="m_chkCSVOutput">
@@ -674,7 +674,7 @@
      <x>0</x>
      <y>0</y>
      <width>983</width>
-     <height>20</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
