--- a/products/RAT-STATS/rstats_modules/unrestricted_attribute_appraisal/src/UIRStatsUAA.ui
+++ b/products/RAT-STATS/rstats_modules/unrestricted_attribute_appraisal/src/UIRStatsUAA.ui
@@ -270,7 +270,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="m_btnContinue">
+        <widget class="QPushButton" name="m_btnExecute">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
            <horstretch>0</horstretch>
@@ -284,7 +284,7 @@
           </size>
          </property>
          <property name="text">
-          <string>Generate</string>
+          <string>Execute</string>
          </property>
          <property name="iconSize">
           <size>
@@ -398,16 +398,16 @@
           </property>
           <layout class="QGridLayout" name="gridLayout_2">
            <property name="leftMargin">
-            <number>6</number>
+            <number>11</number>
            </property>
            <property name="topMargin">
-            <number>6</number>
+            <number>11</number>
            </property>
            <property name="rightMargin">
-            <number>6</number>
+            <number>11</number>
            </property>
            <property name="bottomMargin">
-            <number>6</number>
+            <number>11</number>
            </property>
            <property name="spacing">
             <number>11</number>
@@ -429,16 +429,16 @@
           </property>
           <layout class="QVBoxLayout" name="verticalLayout">
            <property name="leftMargin">
-            <number>6</number>
+            <number>11</number>
            </property>
            <property name="topMargin">
-            <number>6</number>
+            <number>11</number>
            </property>
            <property name="rightMargin">
-            <number>6</number>
+            <number>11</number>
            </property>
            <property name="bottomMargin">
-            <number>6</number>
+            <number>11</number>
            </property>
            <item>
             <widget class="QSpinBox" name="m_spnUniverseSize">
@@ -472,16 +472,16 @@
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_6">
            <property name="leftMargin">
-            <number>6</number>
+            <number>11</number>
            </property>
            <property name="topMargin">
-            <number>6</number>
+            <number>11</number>
            </property>
            <property name="rightMargin">
-            <number>6</number>
+            <number>11</number>
            </property>
            <property name="bottomMargin">
-            <number>6</number>
+            <number>11</number>
            </property>
            <item>
             <widget class="QSpinBox" name="m_spnSampleSize">
@@ -503,16 +503,16 @@
           </property>
           <layout class="QGridLayout" name="gridLayout">
            <property name="leftMargin">
-            <number>6</number>
+            <number>11</number>
            </property>
            <property name="topMargin">
-            <number>6</number>
+            <number>11</number>
            </property>
            <property name="rightMargin">
-            <number>6</number>
+            <number>11</number>
            </property>
            <property name="bottomMargin">
-            <number>6</number>
+            <number>11</number>
            </property>
            <item row="0" column="0">
             <widget class="QSpinBox" name="m_spnCOI">
@@ -543,16 +543,16 @@
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_4">
            <property name="leftMargin">
-            <number>6</number>
+            <number>11</number>
            </property>
            <property name="topMargin">
-            <number>6</number>
+            <number>11</number>
            </property>
            <property name="rightMargin">
-            <number>6</number>
+            <number>11</number>
            </property>
            <property name="bottomMargin">
-            <number>6</number>
+            <number>11</number>
            </property>
            <item>
             <widget class="QFrame" name="frame">
@@ -595,7 +595,7 @@
      <x>0</x>
      <y>0</y>
      <width>1024</width>
-     <height>20</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -647,7 +647,7 @@
   <tabstop>m_chkTextOutput</tabstop>
   <tabstop>m_tblOutput</tabstop>
   <tabstop>m_btnHelp</tabstop>
-  <tabstop>m_btnContinue</tabstop>
+  <tabstop>m_btnExecute</tabstop>
   <tabstop>m_btnExit</tabstop>
  </tabstops>
  <resources/>
