--- a/products/RAT-STATS/rstats_modules/unrestricted_variable_appraisal/src/UIRStatsUVA.ui
+++ b/products/RAT-STATS/rstats_modules/unrestricted_variable_appraisal/src/UIRStatsUVA.ui
@@ -240,7 +240,7 @@
          </size>
         </property>
         <property name="text">
-         <string>Generate</string>
+         <string>Execute</string>
         </property>
        </widget>
       </item>
@@ -293,16 +293,16 @@
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <property name="leftMargin">
-         <number>9</number>
+         <number>11</number>
         </property>
         <property name="topMargin">
-         <number>9</number>
+         <number>11</number>
         </property>
         <property name="rightMargin">
-         <number>9</number>
+         <number>11</number>
         </property>
         <property name="bottomMargin">
-         <number>9</number>
+         <number>11</number>
         </property>
         <item>
          <widget class="QSpinBox" name="m_spnUniverseSize"/>
@@ -323,16 +323,16 @@
        </property>
        <layout class="QGridLayout" name="gridLayout">
         <property name="leftMargin">
-         <number>9</number>
+         <number>11</number>
         </property>
         <property name="topMargin">
-         <number>9</number>
+         <number>11</number>
         </property>
         <property name="rightMargin">
-         <number>9</number>
+         <number>11</number>
         </property>
         <property name="bottomMargin">
-         <number>9</number>
+         <number>11</number>
         </property>
         <item row="0" column="2">
          <widget class="QRadioButton" name="m_rdbAudited">
@@ -442,7 +442,7 @@
      <x>0</x>
      <y>0</y>
      <width>1024</width>
-     <height>20</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
