--- a/products/RAT-STATS/rstats_modules/unrestricted_variable_appraisal/src/UIRStatsUVA.ui
+++ b/products/RAT-STATS/rstats_modules/unrestricted_variable_appraisal/src/UIRStatsUVA.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Unrestricted </string>
+   <string>Unrestricted Variable Appraisel</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="windowTitle">
