--- a/products/RAT-STATS/rstats_main/src/UIRStatsMain.ui
+++ b/products/RAT-STATS/rstats_main/src/UIRStatsMain.ui
@@ -35,34 +35,6 @@
     </item>
    </layout>
   </widget>
-  <widget class="QMenuBar" name="m_menuBar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>859</width>
-     <height>20</height>
-    </rect>
-   </property>
-   <widget class="QMenu" name="m_menuFile">
-    <property name="title">
-     <string>RAT-STATS Menu</string>
-    </property>
-    <addaction name="m_actionSettings_Manager"/>
-    <addaction name="m_actionAdd_New_Module"/>
-    <addaction name="separator"/>
-    <addaction name="m_actionExit"/>
-   </widget>
-   <widget class="QMenu" name="m_menuHelp">
-    <property name="title">
-     <string>Help</string>
-    </property>
-    <addaction name="m_actionHelp_Topics"/>
-    <addaction name="m_actionAbout_RAT_STATS_2017"/>
-   </widget>
-   <addaction name="m_menuFile"/>
-   <addaction name="m_menuHelp"/>
-  </widget>
   <widget class="QToolBar" name="m_tlbCommands">
    <property name="windowTitle">
     <string>toolBar</string>
@@ -125,6 +97,34 @@
     </layout>
    </widget>
   </widget>
+  <widget class="QMenuBar" name="m_menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>859</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="m_menuFile">
+    <property name="title">
+     <string>RAT-STATS Menu</string>
+    </property>
+    <addaction name="m_actionSettings_Manager"/>
+    <addaction name="m_actionAdd_New_Module"/>
+    <addaction name="separator"/>
+    <addaction name="m_actionExit"/>
+   </widget>
+   <widget class="QMenu" name="m_menuHelp">
+    <property name="title">
+     <string>Help</string>
+    </property>
+    <addaction name="m_actionHelp_Topics"/>
+    <addaction name="m_actionAbout_RAT_STATS_2017"/>
+   </widget>
+   <addaction name="m_menuFile"/>
+   <addaction name="m_menuHelp"/>
+  </widget>
   <action name="m_actionSettings_Manager">
    <property name="text">
     <string>Settings...</string>
@@ -157,6 +157,21 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+N</string>
+   </property>
+  </action>
+  <action name="actionNormal">
+   <property name="text">
+    <string>Normal</string>
+   </property>
+  </action>
+  <action name="actionLarger">
+   <property name="text">
+    <string>Larger</string>
+   </property>
+  </action>
+  <action name="actionLargest">
+   <property name="text">
+    <string>Largest</string>
    </property>
   </action>
  </widget>
