--- a/products/RAT-STATS/rstats_modules/stratified_variable_appraisal/src/UIRStatsSVA.ui
+++ b/products/RAT-STATS/rstats_modules/stratified_variable_appraisal/src/UIRStatsSVA.ui
@@ -868,8 +868,11 @@
     <property name="title">
      <string>File</string>
     </property>
+    <addaction name="separator"/>
+    <addaction name="actionExecute"/>
+    <addaction name="separator"/>
     <addaction name="actionRecently_Used"/>
-    <addaction name="actionExit"/>
+    <addaction name="actionExit_2"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -899,6 +902,16 @@
   <action name="actionHelp">
    <property name="text">
     <string>Help</string>
+   </property>
+  </action>
+  <action name="actionExecute">
+   <property name="text">
+    <string>Execute...</string>
+   </property>
+  </action>
+  <action name="actionExit_2">
+   <property name="text">
+    <string>Exit</string>
    </property>
   </action>
  </widget>
