--- a/products/RAT-STATS/rstats_modules/unrestricted_variable_appraisal/src/UIRStatsUVA.ui
+++ b/products/RAT-STATS/rstats_modules/unrestricted_variable_appraisal/src/UIRStatsUVA.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1024</width>
+    <width>1122</width>
     <height>768</height>
    </rect>
   </property>
@@ -275,6 +275,12 @@
    </layout>
   </widget>
   <widget class="QDockWidget" name="m_dockOptions">
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
    <property name="features">
     <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
    </property>
@@ -287,7 +293,43 @@
    <widget class="QWidget" name="dockWidgetContents_2">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
+      <widget class="QGroupBox" name="m_grpAuditName">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="title">
+        <string>Audit / Review Name:</string>
+       </property>
+       <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <property name="leftMargin">
+         <number>11</number>
+        </property>
+        <property name="topMargin">
+         <number>11</number>
+        </property>
+        <property name="rightMargin">
+         <number>11</number>
+        </property>
+        <property name="bottomMargin">
+         <number>11</number>
+        </property>
+        <item>
+         <widget class="QLineEdit" name="m_txtAuditName"/>
+        </item>
+       </layout>
+      </widget>
+     </item>
+     <item>
       <widget class="QGroupBox" name="verticalGroupBox">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="title">
         <string>Universe Size:</string>
        </property>
@@ -305,7 +347,14 @@
          <number>11</number>
         </property>
         <item>
-         <widget class="QSpinBox" name="m_spnUniverseSize"/>
+         <widget class="QSpinBox" name="m_spnUniverseSize">
+          <property name="maximum">
+           <number>10000</number>
+          </property>
+          <property name="value">
+           <number>1</number>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
@@ -313,7 +362,7 @@
      <item>
       <widget class="QGroupBox" name="verticalGroupBox_2">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+        <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
@@ -389,7 +438,7 @@
        </property>
        <property name="minimumSize">
         <size>
-         <width>275</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
@@ -417,6 +466,12 @@
         </property>
         <item>
          <widget class="QCheckBox" name="m_chkCSVOutput">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="text">
            <string>Excel / Access File</string>
           </property>
@@ -424,6 +479,12 @@
         </item>
         <item>
          <widget class="QCheckBox" name="m_chkTextOutput">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="text">
            <string>Text File</string>
           </property>
@@ -441,8 +502,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1024</width>
-     <height>25</height>
+     <width>1122</width>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -450,6 +511,8 @@
      <string>&amp;File</string>
     </property>
     <addaction name="actionRecently_Used"/>
+    <addaction name="actionExecute"/>
+    <addaction name="separator"/>
     <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menu_Help">
@@ -578,20 +641,6 @@
         <item row="1" column="0">
          <widget class="QComboBox" name="m_cmbDataRowStartDataTable"/>
         </item>
-        <item row="4" column="0">
-         <widget class="QPushButton" name="m_btnAddRowDataTable">
-          <property name="text">
-           <string>New Row</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="1">
-         <widget class="QPushButton" name="m_btnAddColumnDataTable">
-          <property name="text">
-           <string>New Column</string>
-          </property>
-         </widget>
-        </item>
        </layout>
       </widget>
      </item>
@@ -623,6 +672,27 @@
     </layout>
    </widget>
   </widget>
+  <widget class="QDockWidget" name="m_dockValidationConsole">
+   <property name="features">
+    <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable|QDockWidget::DockWidgetVerticalTitleBar</set>
+   </property>
+   <property name="allowedAreas">
+    <set>Qt::BottomDockWidgetArea|Qt::TopDockWidgetArea</set>
+   </property>
+   <property name="windowTitle">
+    <string>Validation Console</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>8</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents_3">
+    <layout class="QVBoxLayout" name="verticalLayout_6">
+     <item>
+      <widget class="QListWidget" name="m_lstValidationConsole"/>
+     </item>
+    </layout>
+   </widget>
+  </widget>
   <action name="actionRecently_Used">
    <property name="text">
     <string>Recently Used</string>
@@ -641,6 +711,11 @@
   <action name="actionHelp_Topics">
    <property name="text">
     <string>Help Topics</string>
+   </property>
+  </action>
+  <action name="actionExecute">
+   <property name="text">
+    <string>Execute...</string>
    </property>
   </action>
  </widget>
