--- a/products/RAT-STATS/rstats_main/src/UIRStatsMain.ui
+++ b/products/RAT-STATS/rstats_main/src/UIRStatsMain.ui
@@ -50,7 +50,7 @@
    <addaction name="m_actionAbout_RAT_STATS_2017"/>
    <addaction name="m_actionHelp_Topics"/>
   </widget>
-  <widget class="QDockWidget" name="dockWidget">
+  <widget class="QDockWidget" name="m_dockCategories">
    <property name="windowTitle">
     <string>Module Categories:</string>
    </property>
@@ -75,7 +75,7 @@
          <number>4</number>
         </property>
         <item>
-         <widget class="QListWidget" name="m_lstModules">
+         <widget class="QListWidget" name="m_lstCategories">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
             <horstretch>0</horstretch>
