Verified SVA output with both example test cases Cleaned up exception message Fixed bug in SVA/UVA for setting Audit column from session

--- a/products/RAT-STATS/rstats_modules/unrestricted_variable_appraisal/src/UIRStatsUVA.ui
+++ b/products/RAT-STATS/rstats_modules/unrestricted_variable_appraisal/src/UIRStatsUVA.ui
@@ -347,8 +347,11 @@
         </property>
         <item>
          <widget class="QSpinBox" name="m_spnUniverseSize">
+          <property name="minimum">
+           <number>1</number>
+          </property>
           <property name="maximum">
-           <number>10000</number>
+           <number>2000000000</number>
           </property>
           <property name="value">
            <number>1</number>
