Added labels to main menu to show when focus has switched between category list and module list

--- a/products/RAT-STATS/rstats_ui/src/UIRStatsErrorMessage.ui
+++ b/products/RAT-STATS/rstats_ui/src/UIRStatsErrorMessage.ui
@@ -15,7 +15,11 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QTextBrowser" name="m_txtErrorMessage"/>
+    <widget class="QTextBrowser" name="m_txtErrorMessage">
+     <property name="lineWrapMode">
+      <enum>QTextEdit::NoWrap</enum>
+     </property>
+    </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
